--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,112 @@
 <!--
-	Maven build file for CraftCommons
+    Maven build file for CraftCommons
 
-	Copyright (c) 2011-2012 CraftFire <http://www.craftfire.com>
-	CraftCommons is licensed under GNU LESSER GENERAL PUBLIC LICENSE Version 3.
+    Copyright (c) 2011-2012 CraftFire <http://www.craftfire.com>
+    CraftCommons is licensed under GNU LESSER GENERAL PUBLIC LICENSE Version 3.
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<!-- Project information -->
-	<groupId>com.craftfire</groupId>
-	<artifactId>commons</artifactId>
-	<version>dev-SNAPSHOT</version>
-	<name>CraftCommons</name>
-	<url>http://www.craftfire.com</url>
-	<description></description>
+    <!-- Project information -->
+    <groupId>com.craftfire</groupId>
+    <artifactId>commons</artifactId>
+    <version>dev-SNAPSHOT</version>
+    <name>CraftCommons</name>
+    <url>http://www.craftfire.com</url>
+    <description>Commons library by CraftFire which features a data source manager, encryption methods, and more.</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<build.number>Unknown</build.number>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <build.number>Unknown</build.number>
+    </properties>
 
-	<!-- License -->
-	<licenses>
-		<license>
-			<name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
-			<url>http://www.gnu.org/licenses/lgpl.html</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+    <!-- License -->
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-	<!-- Source code -->
-	<scm>
-		<developerConnection>scm:git:git@github.com:CraftFire/${project.name}.git</developerConnection>
-		<connection>scm:git:git://github.com/CraftFire/${project.name}.git</connection>
-		<url>https://github.com/CraftFire/${project.name}</url>
-	</scm>
+    <!-- Source code -->
+    <scm>
+        <developerConnection>scm:git:git@github.com:CraftFire/${project.name}.git</developerConnection>
+        <connection>scm:git:git://github.com/CraftFire/${project.name}.git</connection>
+        <url>https://github.com/CraftFire/${project.name}</url>
+    </scm>
 
-	<!-- Continuous integration -->
-	<ciManagement>
-		<system>jenkins</system>
-		<url>http://ci.craftfire.com</url>
-	</ciManagement>
+    <!-- Continuous integration -->
+    <ciManagement>
+        <system>jenkins</system>
+        <url>http://ci.craftfire.com</url>
+    </ciManagement>
 
-	<!-- Repository locations -->
-	<repositories>
-		<repository>
-			<id>craftfire-repo</id>
-			<url>http://repo.craftfire.com</url>
-		</repository>
-	</repositories>
+    <!-- Repository locations -->
+    <repositories>
+        <repository>
+            <id>craftfire-repo</id>
+            <url>http://repo.craftfire.com</url>
+        </repository>
+    </repositories>
 
-	<!-- Build -->
-	<build>
-		<defaultGoal>clean install</defaultGoal>
-		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-		<!-- Resources -->
-		<resources>
-			<resource>
-				<targetPath>.</targetPath>
-				<filtering>false</filtering>
-				<directory>${basedir}</directory>
-				<includes>
-					<include>LICENSE.txt</include>
-				</includes>
-			</resource>
-		</resources>
-		<!-- Build plugins -->
-		<plugins>
-			<!-- Compile plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <!-- Dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.18</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.164</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <!-- Build -->
+    <build>
+        <defaultGoal>clean install</defaultGoal>
+        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+        <!-- Resources -->
+        <resources>
+            <resource>
+                <targetPath>.</targetPath>
+                <filtering>false</filtering>
+                <directory>${basedir}</directory>
+                <includes>
+                    <include>LICENSE.txt</include>
+                </includes>
+            </resource>
+        </resources>
+        <!-- Build plugins -->
+        <plugins>
+            <!-- Compile plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
