--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,30 @@
-<!--
-    Maven build file for CraftCommons
-
-    Copyright (c) 2011-2012 CraftFire <http://www.craftfire.com>
-    CraftCommons is licensed under GNU LESSER GENERAL PUBLIC LICENSE Version 3.
--->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Project information -->
+    <name>CraftCommons</name>
     <groupId>com.craftfire</groupId>
     <artifactId>commons</artifactId>
-    <version>dev-SNAPSHOT</version>
-    <name>CraftCommons</name>
+    <version>0.0.1-SNAPSHOT</version>
     <url>http://www.craftfire.com</url>
+    <inceptionYear>2011</inceptionYear>
     <description>Commons library by CraftFire which features a data source manager, encryption methods, and more.</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <build.number>Unknown</build.number>
+        <buildNumber>0</buildNumber>
     </properties>
+
+    <!-- Organization -->
+    <organization>
+        <name>CraftFire</name>
+        <url>http://www.craftfire.com</url>
+    </organization>
 
     <!-- License -->
     <licenses>
         <license>
-            <name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
+            <name>GNU Lesser General Public License Version 3</name>
             <url>http://www.gnu.org/licenses/lgpl.html</url>
             <distribution>repo</distribution>
         </license>
@@ -32,15 +32,15 @@
 
     <!-- Source code -->
     <scm>
-        <developerConnection>scm:git:git@github.com:CraftFire/${project.name}.git</developerConnection>
-        <connection>scm:git:git://github.com/CraftFire/${project.name}.git</connection>
-        <url>https://github.com/CraftFire/${project.name}</url>
+        <developerConnection>scm:git:git@github.com:CraftFire/CraftCommons.git</developerConnection>
+        <connection>scm:git:git://github.com/CraftFire/CraftCommons.git</connection>
+        <url>https://github.com/CraftFire/CraftCommons</url>
     </scm>
 
     <!-- Continuous integration -->
     <ciManagement>
         <system>jenkins</system>
-        <url>http://ci.craftfire.com</url>
+        <url>http://build.craftfire.com/job/CraftCommons</url>
     </ciManagement>
 
     <!-- Repository locations -->
@@ -50,13 +50,19 @@
             <url>http://repo.craftfire.com</url>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>craftfire-repo</id>
+            <url>http://repo.craftfire.com</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <!-- Dependencies -->
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.18</version>
+            <version>5.1.20</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -68,7 +74,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.164</version>
+            <version>1.3.167</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -79,10 +85,10 @@
         </dependency>
     </dependencies>
 
-    <!-- Build -->
+    <!-- Build settings -->
     <build>
         <defaultGoal>clean install</defaultGoal>
-        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+
         <!-- Resources -->
         <resources>
             <resource>
@@ -94,19 +100,107 @@
                 </includes>
             </resource>
         </resources>
-        <!-- Build plugins -->
+
+        <!-- Plugins -->
         <plugins>
+            <!-- License header formatting plugin -->
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.10.b1</version>
+                <executions>
+                    <execution>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <quiet>true</quiet>
+                    <encoding>UTF-8</encoding>
+                    <strictCheck>true</strictCheck>
+                    <header>${basedir}/HEADER.txt</header>
+                    <keywords>
+                        <keyword>${project.name}</keyword>
+                        <keyword>license</keyword>
+                    </keywords>
+                    <mapping>
+                        <java>SLASHSTAR_STYLE</java>
+                    </mapping>
+                    <properties>
+                        <name>${project.name}</name>
+                        <url>${project.organization.url}</url>
+                        <license>GNU Lesser General Public License</license>
+                        <licenseUrl>http://www.gnu.org/licenses/lgpl.html</licenseUrl>
+                        <copyright>Copyright (c) ${project.inceptionYear}-2012, ${project.organization.name}</copyright>
+                    </properties>
+                    <includes>
+                        <include>src/main/java/**</include>
+                        <include>src/test/java/**</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <!-- Version strip plugin -->
+            <plugin>
+                <groupId>com.sourcesense.maven</groupId>
+                <artifactId>maven-nosnapshot-plugin</artifactId>
+                <version>0.0.7-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>strip</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <version>${project.version}</version>
+                    <propertyName>releaseVersion</propertyName>
+                </configuration>
+            </plugin>
             <!-- Compile plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.4</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
+
+        <!-- Plugin management -->
+        <pluginManagement>
+            <plugins>
+                <!-- Eclipse exclusions -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.sourcesense.maven</groupId>
+                                        <artifactId>maven-nosnapshot-plugin</artifactId>
+                                        <versionRange>[0.0.7-SNAPSHOT,)</versionRange>
+                                        <goals>
+                                            <goal>strip</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore/>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
