--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
         <repository>
             <id>craftfire-repo</id>
             <url>http://repo.craftfire.com</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
         </repository>
     </repositories>
     <pluginRepositories>
