Added DbTest for H2. Fixed some bugs occurring when using H2. Improved SQL type parsing to work better with H2.

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
 		        <configuration>
                     <excludes>
                         <exclude>**/DbTest_MySQL.java</exclude>
+                        <exclude>**/DbTest_H2.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
