Maven clean. Added one more exclude to maven test plugin in pom.xml (just to make sure)

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,7 @@
                     <excludes>
                         <exclude>**/DbTest_MySQL.java</exclude>
                         <exclude>**/DbTest_H2.java</exclude>
+                        <exclude>**/DbTest.java</exclude>
                     </excludes>
                 </configuration>
                 <executions>
