--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 # Set default behaviour, in case users don't have core.autocrlf set.
-* text=auto
+* text
+*.java text
 
 # Denote all files that are truly binary and should not be modified.
+*.db binary
 *.png binary
 *.jpg binary
