--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.20</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.7.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -90,6 +85,11 @@
             <groupId>com.boxysystems</groupId>
             <artifactId>jgoogleanalytics</artifactId>
             <version>0.5</version>
+        </dependency>
+        <dependency>
+        	<groupId>javax.mail</groupId>
+        	<artifactId>mail</artifactId>
+        	<version>1.4</version>
         </dependency>
     </dependencies>
 
