--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
         	<artifactId>snakeyaml</artifactId>
         	<version>1.11</version>
         </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<version>1.9.5</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- Build settings -->
@@ -121,7 +127,7 @@
                 <filtering>false</filtering>
                 <directory>${basedir}/src/test/resource</directory>
                 <includes>
-                    <include>test.h2.db</include>
+                    <include>**.*</include>
                 </includes>
             </testResource>
         </testResources>
