Add Javadoc gh-pages deployment and style settings. Cleanup pom.xml and update dependency versions. Move test resources to correct resources directory. Update license headers to remove current year. Fix line endings on a few files to LF. Add config file for Travis-CI.

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Project information -->
@@ -10,18 +11,19 @@
     <inceptionYear>2011</inceptionYear>
     <description>Commons library by CraftFire which features a data source manager, encryption methods, and more.</description>
 
+    <!-- Build properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <buildNumber>0</buildNumber>
     </properties>
 
-    <!-- Organization -->
+    <!-- Organization information -->
     <organization>
         <name>CraftFire</name>
         <url>http://www.craftfire.com</url>
     </organization>
 
-    <!-- License -->
+    <!-- License information -->
     <licenses>
         <license>
             <name>GNU Lesser General Public License Version 3</name>
@@ -30,20 +32,26 @@
         </license>
     </licenses>
 
-    <!-- Source code -->
+    <!-- Source code access -->
     <scm>
         <developerConnection>scm:git:git@github.com:CraftFire/CraftCommons.git</developerConnection>
         <connection>scm:git:git://github.com/CraftFire/CraftCommons.git</connection>
         <url>https://github.com/CraftFire/CraftCommons</url>
     </scm>
 
-    <!-- Continuous integration -->
+    <!-- Build server -->
     <ciManagement>
         <system>jenkins</system>
         <url>http://build.craftfire.com/job/CraftCommons</url>
     </ciManagement>
 
-    <!-- Repository locations -->
+    <!-- Issue tracker -->
+    <issueManagement>
+        <system>jira</system>
+        <url>http://issues.craftfire.com/browse/COMMONS</url>
+    </issueManagement>
+
+    <!-- Dependency repositories -->
     <repositories>
         <repository>
             <id>craftfire-repo</id>
@@ -54,6 +62,8 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <!-- Build plugin repositories -->
     <pluginRepositories>
         <pluginRepository>
             <id>craftfire-repo</id>
@@ -61,212 +71,213 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <!-- Dependencies -->
+    <!-- Build dependencies -->
     <dependencies>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.20</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.167</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- Include in final JAR -->
         <dependency>
             <groupId>com.boxysystems</groupId>
             <artifactId>jgoogleanalytics</artifactId>
             <version>0.5</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-        	<groupId>javax.mail</groupId>
-        	<artifactId>mail</artifactId>
-        	<version>1.4</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-        	<groupId>org.yaml</groupId>
-        	<artifactId>snakeyaml</artifactId>
-        	<version>1.11</version>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.12</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- Provided by third-party -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.171</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-        	<groupId>org.mockito</groupId>
-        	<artifactId>mockito-core</artifactId>
-        	<version>1.9.5</version>
-        	<scope>test</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Testing only -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
-    <!-- Build settings -->
+    <!-- Build configuration -->
     <build>
         <defaultGoal>clean install</defaultGoal>
 
-        <!-- Resources -->
+        <!-- Resources to include -->
         <resources>
+            <!-- Static resources -->
             <resource>
-                <targetPath>.</targetPath>
                 <filtering>false</filtering>
-                <directory>${basedir}</directory>
+                <directory>.</directory>
+                <targetPath>.</targetPath>
                 <includes>
                     <include>LICENSE.txt</include>
                 </includes>
             </resource>
         </resources>
-        
-        <!-- Test Resources -->
+
+        <!-- Test resources -->
         <testResources>
             <testResource>
-                <targetPath>.</targetPath>
                 <filtering>false</filtering>
-                <directory>${basedir}/src/test/resource</directory>
+                <directory>src/test/resources</directory>
+                <targetPath>.</targetPath>
                 <includes>
-                    <include>**.*</include>
+                    <include>**/*</include>
                 </includes>
             </testResource>
         </testResources>
 
-        <!-- Plugins -->
+        <!-- Build plugins -->
         <plugins>
-            <!-- License header formatting plugin -->
+            <!-- License header plugin -->
             <plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.10.b1</version>
                 <executions>
                     <execution>
+                        <configuration>
+                            <properties>
+                                <name>${project.name}</name>
+                                <url>${project.organization.url}</url>
+                                <inceptionYear>${project.inceptionYear}</inceptionYear>
+                                <organization>${project.organization.name}</organization>
+                            </properties>
+                            <quiet>true</quiet>
+                            <encoding>UTF-8</encoding>
+                            <strictCheck>true</strictCheck>
+                            <header>HEADER.txt</header>
+                            <mapping>
+                                <java>SLASHSTAR_STYLE</java>
+                            </mapping>
+                            <keywords>
+                                <keyword>${project.name}</keyword>
+                                <keyword>license</keyword>
+                            </keywords>
+                            <includes>
+                                <include>src/main/java/**</include>
+                                <include>src/test/java/**</include>
+                            </includes>
+                        </configuration>
                         <phase>clean</phase>
                         <goals>
                             <goal>format</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <quiet>true</quiet>
-                    <encoding>UTF-8</encoding>
-                    <strictCheck>true</strictCheck>
-                    <header>${basedir}/HEADER.txt</header>
-                    <keywords>
-                        <keyword>${project.name}</keyword>
-                        <keyword>license</keyword>
-                    </keywords>
-                    <mapping>
-                        <java>SLASHSTAR_STYLE</java>
-                    </mapping>
-                    <properties>
-                        <name>${project.name}</name>
-                        <url>${project.organization.url}</url>
-                        <license>GNU Lesser General Public License</license>
-                        <licenseUrl>http://www.gnu.org/licenses/lgpl.html</licenseUrl>
-                        <copyright>Copyright (c) ${project.inceptionYear}-2012, ${project.organization.name}</copyright>
-                    </properties>
-                    <includes>
-                        <include>src/main/java/**</include>
-                        <include>src/test/java/**</include>
-                    </includes>
-                </configuration>
             </plugin>
-            <!-- Version strip plugin -->
-            <plugin>
-                <groupId>com.sourcesense.maven</groupId>
-                <artifactId>maven-nosnapshot-plugin</artifactId>
-                <version>0.0.7-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>strip</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <version>${project.version}</version>
-                    <propertyName>releaseVersion</propertyName>
-                </configuration>
-            </plugin>
-            <!-- Compile plugin -->
+            <!-- Source compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <compilerArguments>
+                        <O>-Xlint:all</O>
+                        <O>-Xlint:-path</O>
+                    </compilerArguments>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
-            <!--  Test plugin -->
+            <!-- Testing plugin -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7.1</version>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>2.14</version>
             </plugin>
             <!-- JAR dependency addition plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.6</version>
+                <version>2.0</version>
                 <executions>
                     <execution>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>javax.mail:mail</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Javadocs GitHub deployment -->
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.7</version>
+                <executions>
+                    <execution>
                         <configuration>
-                            <artifactSet>
-                                <includes>
-                                    <include>javax.*:*</include>
-                                </includes>
-                            </artifactSet>
+                            <server>github-deploy</server>
+                            <repositoryName>${project.name}</repositoryName>
+                            <repositoryOwner>${project.organization.name}</repositoryOwner>
+                            <branch>refs/heads/gh-pages</branch>
+                            <merge>true</merge>
+                            <path>commons</path>
+                            <message>Javadocs for ${project.name} ${project.version}-b${buildNumber}</message>
                         </configuration>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-
-        <!-- Plugin management -->
-        <pluginManagement>
-            <plugins>
-                <!-- Eclipse exclusions -->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>com.sourcesense.maven</groupId>
-                                        <artifactId>maven-nosnapshot-plugin</artifactId>
-                                        <versionRange>[0.0.7-SNAPSHOT,)</versionRange>
-                                        <goals>
-                                            <goal>strip</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore/>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
+    <!-- Reporting configuration -->
+    <reporting>
+        <!-- Reporting plugins -->
+        <plugins>
+            <!-- Javadoc creation plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <windowtitle>Javadoc | ${project.name} ${project.version}-b${buildNumber}</windowtitle>
+                    <doctitle><![CDATA[${project.name} ${project.version}-b${buildNumber}]]></doctitle>
+                    <header><![CDATA[<a href="https://github.com/CraftFire/${project.name}" target="_blank"><img src="#"></a>]]></header>
+                    <bottom><![CDATA[Copyright (c) {inceptionYear} <a href="${project.organization.url}" target="_blank">${project.organization.name}</a>. ${project.name} is licensed under <a href="http://www.gnu.org/licenses/lgpl.html" target="_blank">GNU Lesser General Public License Version 3</a>]]></bottom>
+                    <stylesheetfile>src/main/javadoc/stylesheet.css</stylesheetfile>
+                    <author>false</author>
+                    <version>false</version>
+                    <detectLinks>true</detectLinks>
+                    <linksource>true</linksource>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
