--- a/pom.xml
+++ b/pom.xml
@@ -86,12 +86,6 @@
             <version>1.4.7</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.12</version>
-            <scope>compile</scope>
-        </dependency>
         <!-- Provided by third-party -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -103,6 +97,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.12</version>
             <scope>provided</scope>
         </dependency>
         <!-- Testing only -->
