--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,17 @@
-# Set default behaviour, in case users don't have core.autocrlf set.
-* text
+# Normalize as LF in the repository, OS native locally
+* text=auto
 *.java text
 
-# Denote all files that are truly binary and should not be modified.
+# Binary files that should not be modified
+*.dat binary
 *.db binary
-*.png binary
+*.gif binary
+*.icns binary
+*.ico binary
+*.jks binary
 *.jpg binary
+*.key binary
+*.png binary
+*.ttf binary
+*.wav binary
+JavaApplicationStub binary
