--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-# Compiled source #
-###################
+# Build #
+#########
+MANIFEST.MF
+dependency-reduced-pom.xml
+
+# Compiled #
+############
 bin
+build
+dist
 lib
 out
+run
 target
 *.com
 *.class
@@ -11,48 +19,55 @@ target
 *.o
 *.so
 
-# Git #
-#######
-.git
+# Databases #
+#############
+*.db
+*.sql
+*.sqlite
 
 # Packages #
 ############
 *.7z
 *.dmg
+*.ear
 *.gz
 *.iso
 *.jar
 *.rar
 *.tar
+*.war
 *.zip
 
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
+# Repository #
+##############
+.git
 
-# OS generated files #
-######################
+# Logging #
+###########
+/logs
+*.log
+
+# Misc #
+########
+*.bak
+*.tmp
+
+# System #
+##########
 .DS_Store
 ehthumbs.db
-Icon?
 Thumbs.db
 
-# Build files #
-#################
-MANIFEST.MF
-dependency-reduced-pom.xml
-
-# Project files #
-#####################
+# Project #
+###########
+.buildpath
 .classpath
+.cproject
 .externalToolBuilders
+.gradle
 .idea
 .project
 .settings
-build
-dist
 nbproject
 atlassian-ide-plugin.xml
 build.xml
@@ -60,7 +75,6 @@ nb-configuration.xml
 *.iml
 *.ipr
 *.iws
+*.launch
+*.pydevproject
 
-# Misc files #
-##############
-*.bak
