--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Project information -->
@@ -7,21 +6,25 @@
     <groupId>com.craftfire</groupId>
     <artifactId>commons</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <url>http://www.craftfire.com</url>
+    <packaging>jar</packaging>
     <inceptionYear>2011</inceptionYear>
+    <url>http://www.craftfire.com</url>
     <description>Commons library by CraftFire which features a data source manager, encryption methods, and more.</description>
+
+    <!-- Parent information -->
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
     <!-- Build properties -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <buildNumber>0</buildNumber>
+        <ciSystem>unknown</ciSystem>
+        <commit>unknown</commit>
     </properties>
-
-    <!-- Organization information -->
-    <organization>
-        <name>CraftFire</name>
-        <url>http://www.craftfire.com</url>
-    </organization>
 
     <!-- License information -->
     <licenses>
@@ -32,30 +35,55 @@
         </license>
     </licenses>
 
+    <!-- Organization information -->
+    <organization>
+        <name>CraftFire</name>
+        <url>http://www.craftfire.com</url>
+    </organization>
+
+    <!-- Project developers -->
+    <developers>
+        <developer>
+            <id>Contex</id>
+            <name>Contex</name>
+            <email>contexmoh@gmail.com</email>
+        </developer>
+        <developer>
+            <id>Wolf480pl</id>
+            <name>Wolf480pl</name>
+            <email>wolf480@interia.pl</email>
+        </developer>
+        <developer>
+            <id>Wulfspider</id>
+            <name>Luke Spragg</name>
+            <email>the@wulf.im</email>
+        </developer>
+    </developers>
+
     <!-- Source code access -->
     <scm>
-        <developerConnection>scm:git:git@github.com:CraftFire/CraftCommons.git</developerConnection>
         <connection>scm:git:git://github.com/CraftFire/CraftCommons.git</connection>
+        <developerConnection>scm:git:git@github.com:CraftFire/CraftCommons.git</developerConnection>
         <url>https://github.com/CraftFire/CraftCommons</url>
     </scm>
 
-    <!-- Build server -->
+    <!-- Continuous integration -->
     <ciManagement>
-        <system>jenkins</system>
-        <url>http://build.craftfire.com/job/CraftCommons</url>
+        <system>travis</system>
+        <url>https://travis-ci.org/CraftFire/CraftCommons</url>
     </ciManagement>
 
-    <!-- Issue tracker -->
+    <!-- Issue management -->
     <issueManagement>
         <system>jira</system>
-        <url>http://issues.craftfire.com/browse/COMMONS</url>
+        <url>https://craftfire.atlassian.net/browse/COMMONS</url>
     </issueManagement>
 
     <!-- Dependency repositories -->
     <repositories>
         <repository>
-            <id>craftfire-repo</id>
-            <url>http://repo.craftfire.com</url>
+            <id>sonatype-nexus</id>
+            <url>https://oss.sonatype.org/content/groups/public</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
@@ -66,20 +94,18 @@
     <!-- Build plugin repositories -->
     <pluginRepositories>
         <pluginRepository>
-            <id>craftfire-repo</id>
-            <url>http://repo.craftfire.com</url>
+            <id>sonatype-nexus</id>
+            <url>https://oss.sonatype.org/content/groups/public</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
-    <!-- Build dependencies -->
+    <!-- Project dependencies -->
     <dependencies>
         <!-- Include in final JAR -->
-        <dependency>
-            <groupId>com.boxysystems</groupId>
-            <artifactId>jgoogleanalytics</artifactId>
-            <version>0.5</version>
-            <scope>compile</scope>
-        </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
@@ -90,19 +116,19 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.171</version>
+            <version>1.3.175</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.24</version>
+            <version>5.1.28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.12</version>
+            <version>1.13</version>
             <scope>provided</scope>
         </dependency>
         <!-- Testing only -->
@@ -160,10 +186,10 @@
                     <execution>
                         <configuration>
                             <properties>
-                                <name>${project.name}</name>
+                                <project>${project.name}</project>
+                                <year>${project.inceptionYear}</year>
+                                <name>${project.organization.name}</name>
                                 <url>${project.organization.url}</url>
-                                <inceptionYear>${project.inceptionYear}</inceptionYear>
-                                <organization>${project.organization.name}</organization>
                             </properties>
                             <quiet>true</quiet>
                             <encoding>UTF-8</encoding>
@@ -192,10 +218,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <compilerArguments>
                         <O>-Xlint:all</O>
                         <O>-Xlint:-path</O>
@@ -204,17 +230,26 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
-            <!-- Testing plugin -->
+            <!-- JAR creation plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Specification-Title>${project.name}</Specification-Title>
+                            <Specification-Version>${project.version}+${ciSystem}-b${buildNumber}.git-${commit}</Specification-Version>
+                            <Specification-Vendor>${project.organization.name}</Specification-Vendor>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
-            <!-- JAR dependency addition plugin -->
+            <!-- Dependency addition plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -224,53 +259,22 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Javadocs GitHub deployment -->
+            <!-- Coveralls reporting plugin  -->
             <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>0.7</version>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <server>github-deploy</server>
-                            <repositoryName>${project.name}</repositoryName>
-                            <repositoryOwner>${project.organization.name}</repositoryOwner>
-                            <branch>refs/heads/gh-pages</branch>
-                            <merge>true</merge>
-                            <path>commons</path>
-                            <message>Javadocs for ${project.name} ${project.version}-b${buildNumber}</message>
-                        </configuration>
-                        <phase>site</phase>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>2.1.0</version>
             </plugin>
-        </plugins>
-    </build>
-
-    <!-- Reporting configuration -->
-    <reporting>
-        <!-- Reporting plugins -->
-        <plugins>
-            <!-- Javadoc creation plugin -->
+            <!-- Cobertura test coverage plugin -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
-                    <windowtitle>Javadoc | ${project.name} ${project.version}-b${buildNumber}</windowtitle>
-                    <doctitle><![CDATA[${project.name} ${project.version}-b${buildNumber}]]></doctitle>
-                    <header><![CDATA[<a href="https://github.com/CraftFire/${project.name}" target="_blank"><img src="#"></a>]]></header>
-                    <bottom><![CDATA[Copyright (c) {inceptionYear} <a href="${project.organization.url}" target="_blank">${project.organization.name}</a>. ${project.name} is licensed under <a href="http://www.gnu.org/licenses/lgpl.html" target="_blank">GNU Lesser General Public License Version 3</a>]]></bottom>
-                    <stylesheetfile>src/main/javadoc/stylesheet.css</stylesheetfile>
-                    <author>false</author>
-                    <version>false</version>
-                    <detectLinks>true</detectLinks>
-                    <linksource>true</linksource>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
                 </configuration>
             </plugin>
         </plugins>
-    </reporting>
+    </build>
 </project>
